@@ -4,6 +4,10 @@
   BF: Service: Uniform use of status 204 for 404 in relation to targets in the storage (axes)
       Status 404 is now only used in relation to storage.
       Addressed targets (axes) use status 204 in combination with the response header Storage-Effects.
+  BF: Service: Optimization/harmonization of content types for XML
+      Fragments (PUT/PATCH) uses text/xhtml
+      XML output uses application/xml
+      XSLT input (POST) uses application/xslt+xml
 
 1.2.0 2021xxxx
   NT: Version was skipped
